# khazad-dum

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
docs/: index.html  khazad-dum.js  khazad-dum_bg.wasm
resources/: th.xp
src/: components.rs  entities.rs  gui.rs  input.rs  main.rs  map.rs  menu.rs  mod.rs  rex_assets.rs
src/ecs/: components.rs  entities.rs  mod.rs  systems.rs
src/input/: input.rs
src/systems/: damage.rs  hunger.rs  inventory.rs  map_indexing.rs  melee_combat.rs  mod.rs  monster_ai.rs  particle_system.rs  player.rs  saveload.rs  spawn_table.rs  spawner.rs  trigger.rs  visibility.rs
wasm/: myblob.js  myblob_bg.wasm
