[package]
name = "khazad-dum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Roguelike toolkit
rltk = { version = "0.8.7" }
# Specs ECS
specs = "0.20.0"
# Derive macro for Specs ECS
specs-derive = "0.4.1"