[package]
name = "khazad-dum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commitlint-rs = "0.1.9"
# Roguelike toolkit
#rltk = { version = "0.8.7", features = ["serde"]}
bracket-lib = { git = "https://github.com/amethyst/bracket-lib", branch = "master", features = ["serde"] }
# Specs ECS
specs = {version = "0.20.0", features = ["serde"] }
# Derive macro for Specs ECS
specs-derive = "0.4.1"
# Serde
serde = {version = "1.0.93",features = ["derive"]}
# Serde_json
serde_json = "1.0.39"